Remove FontAwesome CDN entry. Add static font awesome entry to application stylesheet.

--- a/app/assets/stylesheets/rocket_job_mission_control/application.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/application.scss
@@ -14,6 +14,7 @@
  *= require selectize.default
  *= require dataTables/extras/dataTables.responsive
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
+ *= require font-awesome-4.7.0/css/font-awesome.min
  *= require_self
  *= require_tree .
  */
