--- a/app/views/layouts/rocket_job_mission_control/application.html.erb
+++ b/app/views/layouts/rocket_job_mission_control/application.html.erb
@@ -3,8 +3,8 @@
   <head>
     <title><%= title %></title>
 
-    <link href='/assets/favicon.png' rel='icon' type='image/png'>
-    <link href='/assets/rocket-icon-512x512.png' rel='apple-touch-icon-precomposed'>
+    <link href='favicon.png' rel='icon' type='image/png'>
+    <link href='rocket-icon-512x512.png' rel='apple-touch-icon-precomposed'>
 
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <meta content='text/javascript' http-equiv='Content-Script-Type'>
