--- a/app/views/rocket_job_mission_control/servers/index.html.erb
+++ b/app/views/rocket_job_mission_control/servers/index.html.erb
@@ -5,6 +5,7 @@
         <div class='col-md-6'>
           <h2><%= @description %> Servers</h2>
         </div>
+
         <div class='col-md-6'>
           <div class='col-sm-10'>
             <div class='server-collection-actions'>
@@ -12,17 +13,18 @@
                 <div class='btn-group'>
                   <% Array(@actions).each do |action| %>
                     <%= link_to(
-                            "#{action.to_s.humanize.capitalize}",
-                            rocket_job_mission_control.update_all_servers_path(server_action: action),
-                            method: :patch,
-                            data:   {confirm: t(:confirm, scope: [:server, :update_all], action: action.to_s.singularize.humanize.downcase)},
-                            class:  'btn btn-default')
-                    %>
+                      "#{action.to_s.humanize.capitalize}",
+                      rocket_job_mission_control.update_all_servers_path(server_action: action),
+                      method: :patch,
+                      data: { confirm: t(:confirm, scope: [:server, :update_all], action: action.to_s.singularize.humanize.downcase) },
+                      class: 'btn btn-default'
+                    )%>
                   <% end %>
                 </div>
               </ol>
             </div>
           </div>
+
           <div class='col-sm-2 pull-right'>
             <div class='btn btn-default pull-right dt-reload' data-behavior='reload'>
               <i class='fa fa-refresh'></i>
@@ -30,16 +32,18 @@
           </div>
         </div>
       </div>
+
       <table class='table datatable servers-datatable' data-source='<%= @data_table_url %>' style='width: 100%'>
         <thead>
-        <tr>
-          <th>Hostname : PID</th>
-          <th>Workers (Current/Max)</th>
-          <th>Started</th>
-          <th>Heartbeat</th>
-          <th>Actions</th>
-        </tr>
+          <tr>
+            <th>Hostname : PID</th>
+            <th>Workers (Current/Max)</th>
+            <th>Started</th>
+            <th>Heartbeat</th>
+            <th>Actions</th>
+          </tr>
         </thead>
+
         <tbody></tbody>
       </table>
     </div>
