Code Cleanup, and use single quotes when not interpolating ruby expressions.

--- a/app/views/rocket_job_mission_control/dirmon_entries/_sidebar.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_sidebar.html.erb
@@ -1,12 +1,14 @@
-<ul class="nav hidden-xs" id="lg-menu">
+<ul class='nav hidden-xs' id='lg-menu'>
   <li>
     <%= link_to(new_dirmon_entry_path) do %>
-      <i class="fa fa-plus"></i>Create
+      <i class='fa fa-plus'></i>Create
     <% end %>
+
     <%= link_to(dirmon_entries_path) do %>
-      <i class="fa fa-list"></i>All
+      <i class='fa fa-list'></i>All
     <% end %>
   </li>
+
   <% RocketJob::DirmonEntry.aasm.states.map { |s| s.name.to_s }.each do |state| %>
     <li class="<%= state %>">
       <%= link_to("#{state}_dirmon_entries".to_sym) do %>
@@ -18,15 +20,17 @@
 
 <!-- tiny only nav -->
 
-<ul class="nav visible-xs" id="xs-menu">
+<ul class='nav visible-xs' id='xs-menu'>
   <li>
     <%= link_to(new_dirmon_entry_path) do %>
-      <i class="fa fa-plus"></i>
+      <i class='fa fa-plus'></i>
     <% end %>
+
     <%= link_to(dirmon_entries_path) do %>
-      <i class="fa fa-list"></i>
+      <i class='fa fa-list'></i>
     <% end %>
   </li>
+
   <% RocketJob::DirmonEntry.aasm.states.map { |s| s.name.to_s }.each do |state| %>
     <li class="<%= state %>">
       <%= link_to("#{state}_dirmon_entries".to_sym) do %>
@@ -35,4 +39,3 @@
     </li>
   <% end %>
 </ul>
-
