--- a/app/views/rocket_job_mission_control/dirmon_entries/_status.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_status.html.erb
@@ -4,9 +4,11 @@
 <div><label>Archive Directory:</label><%= @dirmon_entry.archive_directory %></div>
 
 </br>
+
 <% @dirmon_entry.properties.each_pair do |name, value| %>
-  <div class="parameters">
+  <div class='parameters'>
     <label><%= name.to_s.titleize %>:</label>
+
     <% if value.is_a?(Array) || value.is_a?(Hash) %>
       <pre><code><%= pretty_print_array_or_hash(value) %></code></pre>
     <% else %>
@@ -14,4 +16,5 @@
     <% end %>
   </div>
 <% end %>
-<div class="id"><label>ID:</label><%= @dirmon_entry.id %></div>
+
+<div class='id'><label>ID:</label><%= @dirmon_entry.id %></div>
