--- a/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.erb
+++ b/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.erb
@@ -1,8 +1,8 @@
-<div class="col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
-  <ul class="nav">
+<div class='col-sm-2 col-xs-1 sidebar-offcanvas' id='sidebar'>
+  <ul class='nav'>
     <li>
-      <a class="visible-xs" data-toggle="offcanvas" href="#">
-        <i class="fa fa-chevron-right"></i>
+      <a class='visible-xs' data-toggle='offcanvas' href='#'>
+        <i class='fa fa-chevron-right'></i>
       </a>
     </li>
   </ul>
