--- a/app/views/rocket_job_mission_control/dirmon_entries/edit.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/edit.html.erb
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <div class="lead">Edit Dirmon Entry</div>
+<div class='container-fluid'>
+  <div class='lead'>Edit Dirmon Entry</div>
 
   <%= render partial: 'form', locals: { action: :update } %>
 </div>
