--- a/app/views/rocket_job_mission_control/jobs/exceptions.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/exceptions.html.erb
@@ -1,39 +1,41 @@
-<div class="job-list">
-  <div class="list">
-    <div class="row">
-      <div class="col-sm-10">
+<div class='job-list'>
+  <div class='list'>
+    <div class='row'>
+      <div class='col-sm-10'>
         <h2>Exceptions for <%= @job.class.name %></h2>
         <%= link_to(@job.class.name, job_path(@job)) %>
         <%= h(@job.description) %>
       </div>
-      <div class="col-sm-2">
-        <div class="btn btn-default pull-right dt-reload" data-behavior="reload">
-          <i class="fa fa-refresh"></i>
+
+      <div class='col-sm-2'>
+        <div class='btn btn-default pull-right dt-reload' data-behavior='reload'>
+          <i class='fa fa-refresh'></i>
         </div>
       </div>
     </div>
+
     <table class='table datatable jobs-datatable' data-source='<%= jobs_url(format: 'json') %>' style='width: 100%'>
       <thead>
-      <tr>
-        <th>Count</th>
-        <th>Exception Class</th>
-        <th>Exception Messages</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% @exceptions.each do |exception| %>
         <tr>
-          <th><%= exception.count %></th>
-          <th>
-            <%= link_to(exception.class_name, exception_job_path(@job, error_type: exception.class_name), class: "card callout") %>
-          </th>
-          <th>
-            <% exception.messages.each do |message| %>
-              <div><%= message %></div>
-            <% end %>
-          </th>
+          <th>Count</th>
+          <th>Exception Class</th>
+          <th>Exception Messages</th>
         </tr>
-      <% end %>
+      </thead>
+
+      <tbody>
+        <% @exceptions.each do |exception| %>
+          <tr>
+            <th><%= exception.count %></th>
+            <th><%= link_to(exception.class_name, exception_job_path(@job, error_type: exception.class_name), class: "card callout") %></th>
+
+            <th>
+              <% exception.messages.each do |message| %>
+                <div><%= message %></div>
+              <% end %>
+            </th>
+          </tr>
+        <% end %>
       </tbody>
     </table>
   </div>
