--- a/app/views/rocket_job_mission_control/jobs/index.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/index.html.erb
@@ -1,23 +1,26 @@
-<div class="job-list">
-  <div class="list">
-    <div class="row">
-      <div class="col-sm-10">
+<div class='job-list'>
+  <div class='list'>
+    <div class='row'>
+      <div class='col-sm-10'>
         <h2><%= @description %> Jobs</h2>
       </div>
-      <div class="col-sm-2">
-        <div class="btn btn-default pull-right dt-reload" data-behavior="reload">
-          <i class="fa fa-refresh"></i>
+
+      <div class='col-sm-2'>
+        <div class='btn btn-default pull-right dt-reload' data-behavior='reload'>
+          <i class='fa fa-refresh'></i>
         </div>
       </div>
     </div>
+
     <table class='table datatable jobs-datatable' data-source='<%= @data_table_url %>' style='width: 100%'>
       <thead>
-      <tr>
-        <% @columns.each do |column| %>
-          <th><%= column[:display] %></th>
-        <% end %>
-      </tr>
+        <tr>
+          <% @columns.each do |column| %>
+            <th><%= column[:display] %></th>
+          <% end %>
+        </tr>
       </thead>
+
       <tbody></tbody>
     </table>
   </div>
@@ -26,7 +29,7 @@
 <script>
   jQuery(function () {
     new RjmcDatatable(
-      $(".jobs-datatable"),
+      $('.jobs-datatable'),
       <%= @table_layout.to_json.html_safe %>
     );
   });
