--- a/app/views/rocket_job_mission_control/jobs/show.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/show.html.erb
@@ -1,34 +1,36 @@
-<div class="row">
-  <div class="col-md-12 job-status">
-    <div id="job">
-      <div class="lead"><%= @job.class.name %></div>
-      <div class="job-state inline-block">
-        <div class="left">State</div>
+<div class='row'>
+  <div class='col-md-12 job-status'>
+    <div id='job'>
+      <div class='lead'><%= @job.class.name %></div>
+
+      <div class='job-state inline-block'>
+        <div class='left'>State</div>
         <div class="<%= job_state(@job) %> right"><%= job_state(@job) %></div>
       </div>
 
       <% if sub_state = @job['sub_state'] %>
-        <div class="job-state inline-block">
-          <div class="left">Batch</div>
-          <div class="running right"><%= @job.sub_state %></div>
+        <div class='job-state inline-block'>
+          <div class='left'>Batch</div>
+          <div class='running right'><%= @job.sub_state %></div>
         </div>
       <% end %>
 
-      <div class="btn-toolbar job-actions pull-right">
+      <div class='btn-toolbar job-actions pull-right'>
         <% if @job.respond_to?(:input) && @job.input.failed.count > 0 %>
-          <div class="btn-group">
+          <div class='btn-group'>
             <%= link_to('Show Exceptions', exceptions_job_path(@job), class: 'btn btn-default') %>
           </div>
         <% end %>
 
         <% if @job.scheduled? %>
-          <div class="btn-group">
+          <div class='btn-group'>
             <%= job_action_link('Run', rocket_job_mission_control.run_now_job_path(@job), :patch) %>
           </div>
         <% end %>
 
-        <div class="btn-group">
+        <div class='btn-group'>
           <% valid_events = @job.aasm.events.collect { |e| e.name } %>
+
           <% if valid_events.include?(:pause) %>
             <%= job_action_link('Pause', rocket_job_mission_control.pause_job_path(@job), :patch) %>
           <% end %>
@@ -42,7 +44,7 @@
           <% end %>
         </div>
 
-        <div class="btn-group">
+        <div class='btn-group'>
           <% if valid_events.include?(:fail) %>
             <%= job_action_link('Fail', rocket_job_mission_control.fail_job_path(@job), :patch) %>
           <% end %>
@@ -55,8 +57,8 @@
         </div>
 
         <% unless @job.completed? || @job.aborted? %>
-          <div class="btn-group">
-            <%= link_to "Edit", edit_job_path(@job), class: "btn btn-default" %>
+          <div class='btn-group'>
+            <%= link_to 'Edit', edit_job_path(@job), class: 'btn btn-default' %>
           </div>
         <% end %>
       </div>
@@ -64,8 +66,8 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-12">
-    <%= render partial: 'status', locals: {job: @job} %>
+<div class='row'>
+  <div class='col-md-12'>
+    <%= render partial: 'status', locals: { job: @job } %>
   </div>
 </div>
