--- a/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.erb
+++ b/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.erb
@@ -2,7 +2,7 @@
   <ul class='nav'>
     <li>
       <a class='visible-xs' data-toggle='offcanvas' href='#'>
-        <i class='fa fa-chevron-right'></i>
+        <i class='fas fa-chevron-right'></i>
       </a>
     </li>
   </ul>
