--- a/app/views/rocket_job_mission_control/jobs/_sidebar.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_sidebar.html.erb
@@ -1,14 +1,14 @@
 <ul class='nav hidden-xs' id='lg-menu'>
   <li class='active'>
     <%= link_to(jobs_path) do %>
-      <i class='fa fa-list'></i>All
+      <i class='fas fa-list'></i> All
     <% end %>
   </li>
 
   <% job_states_with_scheduled.each do |state| %>
     <li class="<%= state %>">
       <%= link_to("#{state}_jobs".to_sym) do %>
-        <i class="fa <%= state_icon(state) %>"></i> <%= state.capitalize %> (<%= job_counts_by_state(state) %>)
+        <i class="fas <%= state_icon(state) %>"></i> <%= state.capitalize %> (<%= job_counts_by_state(state) %>)
       <% end %>
     </li>
   <% end %>
@@ -19,14 +19,14 @@
 <ul class='nav visible-xs' id='xs-menu'>
   <li>
     <%= link_to(jobs_path) do %>
-      <i class='fa fa-list'></i>
+      <i class='fas fa-list'></i>
     <% end %>
   </li>
 
   <% job_states_with_scheduled.each do |state| %>
     <li class="<%= state %>">
       <%= link_to("#{state}_jobs".to_sym) do %>
-        <i class="fa <%= state_icon(state) %>"></i>
+        <i class="fas <%= state_icon(state) %>"></i>
       <% end %>
     </li>
   <% end %>
