--- a/app/views/rocket_job_mission_control/servers/index.html.erb
+++ b/app/views/rocket_job_mission_control/servers/index.html.erb
@@ -27,7 +27,7 @@
 
           <div class='col-sm-2 pull-right'>
             <div class='btn btn-default pull-right dt-reload' data-behavior='reload'>
-              <i class='fa fa-refresh'></i>
+              <i class='fas fa-refresh'></i>
             </div>
           </div>
         </div>
