--- a/app/views/rocket_job_mission_control/dirmon_entries/index.html.erb
+++ b/app/views/rocket_job_mission_control/dirmon_entries/index.html.erb
@@ -7,7 +7,7 @@
 
       <div class='col-sm-2'>
         <div class='btn btn-default pull-right dt-reload' data-behavior='reload'>
-          <i class='fas fa-refresh'></i>
+          <i class='fas fa-sync'></i>
         </div>
       </div>
     </div>
