--- a/app/assets/stylesheets/rocket_job_mission_control/application.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/application.scss
@@ -10,8 +10,6 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require selectize
- *= require selectize.default
  *= require dataTables/extras/dataTables.responsive
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  *= require_self
@@ -21,3 +19,5 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import 'fontawesome-all.min';
+@import 'selectize';
+@import 'selectize.bootstrap3';
