--- a/app/views/rocket_job_mission_control/servers/index.html.erb
+++ b/app/views/rocket_job_mission_control/servers/index.html.erb
@@ -11,14 +11,16 @@
             <div class='server-collection-actions'>
               <ol>
                 <div class='btn-group'>
-                  <% Array(@actions).each do |action| %>
-                    <%= link_to(
-                      "#{action.to_s.humanize.capitalize}",
-                      rocket_job_mission_control.update_all_servers_path(server_action: action),
-                      method: :patch,
-                      data: { confirm: t(:confirm, scope: [:server, :update_all], action: action.to_s.singularize.humanize.downcase) },
-                      class: 'btn btn-default'
-                    )%>
+                  <% if can?(:create, RocketJob::DirmonEntry) %>
+                    <% Array(@actions).each do |action| %>
+                      <%= link_to(
+                              "#{action.to_s.humanize.capitalize}",
+                              rocket_job_mission_control.update_all_servers_path(server_action: action),
+                              method: :patch,
+                              data:   {confirm: t(:confirm, scope: [:server, :update_all], action: action.to_s.singularize.humanize.downcase)},
+                              class:  'btn btn-default'
+                          ) %>
+                    <% end %>
                   <% end %>
                 </div>
               </ol>
