--- a/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
@@ -50,3 +50,21 @@
     border-radius: 0;
   }
 }
+
+.input_slices {
+  font-size: 14px;
+  line-height: 1.5;
+  resize: none;
+  width: 100%;
+  height: 7em;
+  margin-bottom: 4px;
+}
+
+.buttons {
+  padding-top:20px;
+  float: left;
+}
+
+.edit_input{
+  margin-left: 40px;
+}
