--- a/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
@@ -53,10 +53,12 @@
 
 .input_slices {
   font-size: 14px;
-  line-height: 1.5;
+  line-height: 2.0;
   resize: none;
   width: 100%;
-  height: 7em;
+  height: 20em;
+  padding-top:5px;
+  padding-bottom:5px;
   margin-bottom: 4px;
 }
 
@@ -67,4 +69,13 @@
 
 .edit_input{
   margin-left: 40px;
+}
+
+.submit{
+  margin-top: 13px;
+  margin-bottom: 10px;
+}
+
+.edit_button{
+  float: right;
 }
