--- a/app/views/rocket_job_mission_control/jobs/_edit_input_pagination.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/_edit_input_pagination.html.erb
@@ -6,25 +6,25 @@
 
 <ul class='pagination'>
   <li>
-    <%= link_to(edit_input_job_path(error_type: error_type, offset: 0, record_number: record_number), class: "btn btn-default #{page_nav_disabled_class(pagination[:offset], 0)}", title: 'First') do %>
+    <%= link_to(view_slice_job_path(error_type: error_type, offset: 0, record_number: record_number), class: "btn btn-default #{page_nav_disabled_class(pagination[:offset], 0)}", title: 'First') do %>
       <i class='fas fa-angle-double-left'></i>
     <% end %>
   </li>
 
   <li>
-    <%= link_to(edit_input_job_path(error_type: error_type, offset: previous_offset, record_number: record_number), class: "btn btn-default #{page_nav_disabled_class(pagination[:offset], 0)}", title: 'Previous') do %>
+    <%= link_to(view_slice_job_path(error_type: error_type, offset: previous_offset, record_number: record_number), class: "btn btn-default #{page_nav_disabled_class(pagination[:offset], 0)}", title: 'Previous') do %>
       <i class='fas fa-angle-left'></i>
     <% end %>
   </li>
 
   <li>
-    <%= link_to(edit_input_job_path(error_type: error_type, offset: next_offset, record_number: record_number), class: "btn btn-default #{page_nav_disabled_class(pagination[:offset], pagination[:total])}", title: 'Next') do %>
+    <%= link_to(view_slice_job_path(error_type: error_type, offset: next_offset, record_number: record_number), class: "btn btn-default #{page_nav_disabled_class(pagination[:offset], pagination[:total])}", title: 'Next') do %>
       <i class='fas fa-angle-right'></i>
     <% end %>
   </li>
 
   <li>
-    <%= link_to(edit_input_job_path(error_type: error_type, offset: pagination[:total], record_number: record_number), class: "btn btn-default #{page_nav_disabled_class(pagination[:offset], pagination[:total])}", title: 'Last') do %>
+    <%= link_to(view_slice_job_path(error_type: error_type, offset: pagination[:total], record_number: record_number), class: "btn btn-default #{page_nav_disabled_class(pagination[:offset], pagination[:total])}", title: 'Last') do %>
       <i class='fas fa-angle-double-right'></i>
     <% end %>
   </li>
