--- a/app/views/rocket_job_mission_control/jobs/view_slice.html.erb
+++ b/app/views/rocket_job_mission_control/jobs/view_slice.html.erb
@@ -18,11 +18,25 @@
     </div>
 
     <% @lines.each_with_index do |line, index| %>
-      <div class='message' tabindex="<%= index + 1 %>" id="<%= index + 1 %>">
-        <pre><span>Line: <%= index + 1 %></span><br><br><code><%= line %></code><br><br><% if can?(:edit_slice, @job)%><div class='edit_button'><%= link_to "Edit", edit_slice_job_path(@job, offset: @offset, error_type: @failure_exception.class_name, line_index: index), class: 'btn btn-primary' %></div><% end %>
+      <% if index + 1 == @view_slice_pagination[:record_number] %>
+        <% if flash[:success] %>
+          <%= render partial: 'layouts/rocket_job_mission_control/partials/flash' %>
+          <br>
+        <% end %>
+        <div class='message' tabindex="<%= index + 1 %>" id="<%= index + 1 %>">
+        <pre><span>Line: <%= index + 1 %></span><br><br><code><%= line %></code><br><br>
+          <% if can?(:edit_slice, @job) %><div class='edit_button'><%= link_to "Edit", edit_slice_job_path(@job, offset: @offset, error_type: @failure_exception.class_name, line_index: index), class: 'btn btn-primary' %></div><% end %><div class='edit_button'> <%= link_to "Back", job_path(@job), class: 'btn btn-warning' %></div>
         </pre>
-      </div>
+        </div>
+      <% else %>
+        <div class='message' tabindex="<%= index + 1 %>" id="<%= index + 1 %>">
+        <pre><span>Line: <%= index + 1 %></span><br><br><code><%= line %></code><br><br>
+          <% if can?(:edit_slice, @job) %><div class='edit_button'><%= link_to "Edit", edit_slice_job_path(@job, offset: @offset, error_type: @failure_exception.class_name, line_index: index), class: 'btn btn-primary' %></div><% end %>
+        </pre>
+        </div>
+      <% end %>
     <% end %>
+
   </div>
 </div>
 
